Social and Technologies bars added

--- a/src/Navbar/Navbar.less
+++ b/src/Navbar/Navbar.less
@@ -11,13 +11,13 @@ nav{
 
     img{
         position: absolute;
-        height: 5ch;
+        height: 90%;
         left: 0;
-        top: 0;
+        top: 5%;
     }
 
     .active{
-        color: #89CFF0;
+        color: white;
     }
 
     a{
@@ -28,6 +28,11 @@ nav{
         &:hover{
             color: white;
         }
+
+    }
+
+    :nth-child(2) {
+        margin-left: -10%;
     }
 
 }
