--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,4 +1,6 @@
+@import './globals';
 @import '../Navbar/Navbar.less';
 @import '../Example/Example.less';
 @import '../Home/Home.less';
+@import '../StackBar/StackBar.less';
 @import '../SocialBar/SocialBar.less';
