--- a/src/Home/Home.less
+++ b/src/Home/Home.less
@@ -1,34 +1,55 @@
 .home{
     margin-top: 6.5vh;
-    // background-image: url('../images/nodemap.jpg');
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    background-color: #282c34;
-    height: 95vh;
     color: white;
+
+    .live-divide {
+        margin-top: -2px;
+        background-image: url('../images/nodemap.gif');
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 3px;
+        box-shadow: -1px 3px 2px 0px rgba(0,0,0,0.57);
+    }
 
     .top{
         display: flex;
         justify-content: center;
-        background-image: url('../images/meta.png');
+        background-image: url('../images/meta3.png');
         background-repeat: no-repeat;
         background-size: cover;
+        height: 300px;
+
         .image-wrapper{
-            width: 500px;
-            height: 350px;
-            background-image: url('../images/nodemap.gif');
-            background-repeat: no-repeat;
-            background-size: cover;
+            width: 230px;
+            height: 230px;
+            margin-top: 2%;
+            clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0 76%, 0% 25%);
+            background: #282c34;
 
             img{
-                height: 300px;
-                width: 300px;
-                margin: 2.5vh 0;
+                height: 200px;
+                width: 200px;
+                margin-top: 6.75%;
                 clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0 76%, 0% 25%);
             }
 
         }
+
     }
 
+    h1 {
+        margin-block-end: 0.5px;
+    }
+    h3 {
+        margin-block-start: 0.5%;
+    }
+
+    .animatedEngineer::before{
+        content: '|';
+        animation: typeDev 6s, forwards;
+        animation-fill-mode: forwards;
+        animation-delay: 1s;
+    }
 
 }
