Reorganizing file structure, beginning projects components

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,6 +1,8 @@
 @import './globals';
-@import '../Navbar/Navbar.less';
-@import '../Example/Example.less';
-@import '../Home/Home.less';
-@import '../StackBar/StackBar.less';
-@import '../SocialBar/SocialBar.less';
+@import './mixins.less';
+@import '../components/Navbar/Navbar.less';
+@import '../components/Home/Home.less';
+@import '../components/StackBar/StackBar.less';
+@import '../components/SocialBar/SocialBar.less';
+@import '../components/FAQ/FAQ.less';
+@import '../components/Projects/Projects.less';
