--- a/src/css/index.css
+++ b/src/css/index.css
@@ -323,15 +323,6 @@ nav a:hover {
 nav :nth-child(2) {
   margin-left: -10%;
 }
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
 .home {
   margin-top: 6.5vh;
   color: white;
@@ -428,4 +419,60 @@ code {
 .social-bar li a img {
   height: 66px;
   width: 66px;
+}
+.Collapsible {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.Collapsible .Collapsible__trigger {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: red;
+  border: 1px solid black;
+  width: 90%;
+  height: 30px;
+  box-sizing: border-box;
+}
+.Collapsible .Collapsible__trigger:hover {
+  cursor: pointer;
+}
+.Collapsible .Collapsible__trigger:after {
+  font-family: 'FontAwesome';
+  content: '\f107';
+  position: absolute;
+  right: 7%;
+  margin-top: -3px;
+  transition: transform 600ms;
+  color: black;
+}
+.Collapsible .Collapsible__trigger.is-open:after {
+  transform: rotateZ(180deg);
+}
+.Collapsible .Collapsible__contentOuter {
+  background: gray;
+  width: 90%;
+}
+.profile-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid white;
+  box-sizing: border-box;
+  padding: 5px 8px;
+}
+.profile-card img {
+  width: 25vw;
+}
+.projects {
+  margin-top: 8vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
 }
