--- a/src/components/Projects/Cards/Cards.less
+++ b/src/components/Projects/Cards/Cards.less
@@ -1,10 +1,20 @@
 .profile-card {
     .flex(column);
-    // margin: 25px;
+    flex-wrap: wrap;
+    margin: 25px;
     border: 2px solid white;
     box-sizing: border-box;
+    color: red;
     padding: 5px 8px;
+    width: 30vw;
+    height: 35vh;
     img {
-        width: 25vw;
+        width: 80%;
+        height: 70%;
+        margin: 2% 0;
+    }
+
+    a {
+        margin-top: 2%;
     }
 }
