--- a/src/components/SocialBar/SocialBar.less
+++ b/src/components/SocialBar/SocialBar.less
@@ -1,7 +1,9 @@
 .social-bar{
     display: flex;
     justify-content: center;
+    margin-top: 1%;
     list-style: none;
+
     li{
         margin-right: 2%;
         a{
@@ -9,6 +11,10 @@
                 height: 66px;
                 width: 66px;
             }
+        }
+
+        &:last-child {
+            margin-right: 0;
         }
     }
 }
