--- a/src/css/index.css
+++ b/src/css/index.css
@@ -411,6 +411,7 @@ nav :nth-child(2) {
 .social-bar {
   display: flex;
   justify-content: center;
+  margin-top: 1%;
   list-style: none;
 }
 .social-bar li {
@@ -419,6 +420,9 @@ nav :nth-child(2) {
 .social-bar li a img {
   height: 66px;
   width: 66px;
+}
+.social-bar li:last-child {
+  margin-right: 0;
 }
 .Collapsible {
   display: flex;
@@ -431,10 +435,10 @@ nav :nth-child(2) {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background: red;
+  background: purple;
   border: 1px solid black;
-  width: 90%;
-  height: 30px;
+  width: 60%;
+  height: 40px;
   box-sizing: border-box;
 }
 .Collapsible .Collapsible__trigger:hover {
@@ -444,29 +448,43 @@ nav :nth-child(2) {
   font-family: 'FontAwesome';
   content: '\f107';
   position: absolute;
-  right: 7%;
-  margin-top: -3px;
+  right: 22%;
+  margin-top: -1px;
+  width: 20px;
   transition: transform 600ms;
-  color: black;
+  font-weight: 800;
+  color: violet;
+  background-color: royalblue;
+  clip-path: circle();
 }
 .Collapsible .Collapsible__trigger.is-open:after {
   transform: rotateZ(180deg);
 }
 .Collapsible .Collapsible__contentOuter {
   background: gray;
-  width: 90%;
+  width: 60%;
 }
 .profile-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  margin: 25px;
   border: 2px solid white;
   box-sizing: border-box;
+  color: red;
   padding: 5px 8px;
+  width: 30vw;
+  height: 35vh;
 }
 .profile-card img {
-  width: 25vw;
+  width: 80%;
+  height: 70%;
+  margin: 2% 0;
+}
+.profile-card a {
+  margin-top: 2%;
 }
 .projects {
   margin-top: 8vh;
