added fizzbuzz to about page

--- a/src/components/Projects/Projects.less
+++ b/src/components/Projects/Projects.less
@@ -1,7 +1,15 @@
 @import './Cards/Cards.less';
 
-.projects {
-    margin-top: 8vh;
-    .flex(row; space-evenly;);
-    flex-wrap: wrap;
+
+.project-wrapper{
+    margin-top: 10vh;
+
+    h1 {
+        margin-bottom: 3vh;
+        color: @number;
+    }
+    .projects {
+        .flex(row; space-evenly;);
+        flex-wrap: wrap;
+    }
 }
