--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,8 +1,9 @@
 @import './globals';
+@import './variables.less';
 @import './mixins.less';
 @import '../components/Navbar/Navbar.less';
 @import '../components/Home/Home.less';
 @import '../components/StackBar/StackBar.less';
 @import '../components/SocialBar/SocialBar.less';
-@import '../components/FAQ/FAQ.less';
+@import '../components/About/About.less';
 @import '../components/Projects/Projects.less';
