--- a/src/components/Navbar/Navbar.less
+++ b/src/components/Navbar/Navbar.less
@@ -1,6 +1,7 @@
 nav{
     position: fixed;
     top: 0;
+    z-index: 1;
     display: flex;
     justify-content: space-around;
     align-items: center;
